Version 0.5
~~~~~~~~~~~~~
 == Still in development ==
 
 * [all] Added new software databse handler
 * [all] New database layout
 * [installer] Use Debian packages as dependency sources
 
Version 0.4.10
~~~~~~~~~~~~~
 == Still in development ==
 
 * Compatibility patch for PackageKit > 0.5

Version 0.4b
~~~~~~~~~~~~~
 * licreator: Use the new IPS defs
 * listallmgr: Redesigned interface
 * listallmgr: Revised Qt4 GUI
 * listallmgr: Removed catalog feature (might be replaced by PAPPI)
 * master: New module: libInstaller library
 * master: Advanced translation support
 * master: Completely new build system
 * master: Dropped C/Python bindings
 * master: Switched to Lazarus 0.9.29 to use the new FPC resource system
 * master: Changed to IPK1.0 and IPS1.0 standard for package building
 * master: Added LZMA support for IPK1.0
 * master: Dropped Abbrevia components
 * master: Included libinstaller library
 * master: Completely updated the GUI interfaces
 * master: Switched to Lazarus 0.9.29 and FPC 2.4.0
 * master: Removed support for IPK0.8
 * master: Dropped "PkgXTransact" - replaced with PackageKit
 * lipa: Update to work with new components
 * listallgo: Updated GUI
 * libuild: Work with new IPK1.0 specs
 * libuild: Use LZMA compression for IPK
 * libinstaller: Added PolicyKit support
 * libinstaller: Rebased on PackageKit 0.5.x glib2 interface


Version 0.3.0a
~~~~~~~~~~~~~
 * First beta release, no changelog created
 * Completely refreshed GUI
 * Some other changes
 * Switch to IPKXML

Version 0.2.00a
~~~~~~~~~~~~~
 * First alpha release, no changelog created

Version 0.1.18
~~~~~~~~~~~~~
 * Test release 2, no changelog created

Version 0.1.16
~~~~~~~~~~~~~
 * Test release 1, no changelog created